
includedir = @includedir@/glite/security/voms

include_HEADERS = \
	newformat.h \
	acstack.h

EXTRA_DIST = Client.h data.h gssapi_compat.h \
options.h pass.h Server.h streamers.h fqan.h \
vomsxml.h errors.h log.h sslutils.h \
listfunc.h errortype.h credentials.h newformat.h myproxycertinfo.h \
acstack.h validate.h ccac.h init.h ccwrite.h getopts.h replace.h dbwrap.h \
stamp-h.in stamp-h1.in

MAINTAINERCLEANFILES = Makefile.in
