
includedir = @includedir@/voms

if BUILD_INTERFACES
include_HEADERS = \
	newformat.h \
	acstack.h
endif

EXTRA_DIST = Client.h data.h gssapi_compat.h \
options.h pass.h Server.h fqan.h doio.h \
vomsxml.h errors.h log.h sslutils.h normalize.h \
listfunc.h credentials.h newformat.h proxycertinfo.h proxypolicy.h \
acstack.h validate.h ccac.h init.h ccwrite.h getopts.h replace.h dbwrap.h \
stamp-h.in stamp-h1.in

MAINTAINERCLEANFILES = Makefile.in
